--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -5,7 +5,7 @@ on:
       - master
       - main
 env:
-  LATEX_ROOT: sd-lab-template
+  LATEX_ROOT: sd-lab-presentation
 jobs:
   compile:
     runs-on: ubuntu-latest
